test/main/com/ocaml/sdk/output/errors/unbound/constructor.ml
let x = A

(*
File "constructor.ml", line 1, characters 8-9:
Error: Unbound constructor A

File "constructor.ml", line 1, characters 8-9:
1 | let x = A
            ^
Error: Unbound constructor A
*)